--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <title>Leo Longhi - Full Stack Web Dev</title>
+    <meta name="title" content="Leo Longhi - Full Stack Web Dev">
+    <meta name="description" content="Take a look at my resume!">
+    <meta name="og:title" content="Leo Longhi - Full Stack Web Dev">
+    <meta name="og:description" content="Take a look at my resume!">
     <script
       src="https://kit.fontawesome.com/596322df59.js"
       crossorigin="anonymous"
@@ -89,7 +93,7 @@
         </div>
 
         <div class="skill-container">
-          <h3>Databases</h3>
+          <h3>DATABASES</h3>
           <div>
             <span class="skill-tag">SQL Server</span>
             <span class="skill-tag">PostgreSQL</span>
