Its a date, not a phone!!
added the meta 'telephone=no' so numbers don't get identified as phone numbers in mobile browsers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Take a look at my resume!">
     <meta name="og:title" content="Leo Longhi - Full Stack Web Dev">
     <meta name="og:description" content="Take a look at my resume!">
+    <meta name="format-detection" content="telephone=no">
     <script
       src="https://kit.fontawesome.com/596322df59.js"
       crossorigin="anonymous"
