--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <title>Leo Longhi - Full Stack Web Dev</title>
-    <meta name="title" content="Leo Longhi - Full Stack Web Dev">
-    <meta name="description" content="Take a look at my resume!">
-    <meta name="og:title" content="Leo Longhi - Full Stack Web Dev">
-    <meta name="og:description" content="Take a look at my resume!">
-    <meta name="format-detection" content="telephone=no">
+    <meta name="title" content="Leo Longhi - Full Stack Web Dev" />
+    <meta name="description" content="Take a look at my resume!" />
+    <meta name="og:title" content="Leo Longhi - Full Stack Web Dev" />
+    <meta name="og:description" content="Take a look at my resume!" />
+    <meta name="format-detection" content="telephone=no" />
     <script
       src="https://kit.fontawesome.com/596322df59.js"
       crossorigin="anonymous"
@@ -37,19 +37,21 @@
         <p class="my-name">LEONARDO LONGHI</p>
         <h3 class="i-am gradient-text">FULL STACK WEB DEVELOPER</h3>
         <div class="my-links-container">
-          <a href="https://www.linkedin.com/in/leonardo-longhi/" target="_blank" 
+          <a href="https://www.linkedin.com/in/leonardo-longhi/" target="_blank"
             ><i
               class="fa-brands fa-linkedin-in"
               title="My LinkedIn profile."
             ></i
           ></a>
-          <a href="https://api.whatsapp.com/send/?phone=5519988171807" target="_blank" 
+          <a
+            href="https://api.whatsapp.com/send/?phone=5519988171807"
+            target="_blank"
             ><i
               class="fa-brands fa-whatsapp"
               title="Contact me at Whatsapp!"
             ></i
           ></a>
-          <a href="https://github.com/LLonghi" target="_blank" 
+          <a href="https://github.com/LLonghi" target="_blank"
             ><i
               class="fa-brands fa-github-alt"
               title="Take a look at my Github!"
@@ -69,38 +71,41 @@
         <div class="skill-container">
           <h3>LANGUAGES</h3>
           <div>
-            <span class="skill-tag">C#</span>
-            <span class="skill-tag">PHP</span>
-            <span class="skill-tag">Javascript</span>
-            <span class="skill-tag">NodeJs</span>
-            <span class="skill-tag">Python</span>
-            <span class="skill-tag">FoxPro</span>
-            <span class="skill-tag">CSS/SCSS</span>
+            <span class="skill-tag senior">C#</span>
+            <span class="skill-tag junior">PHP</span>
+            <span class="skill-tag senior">Javascript</span>
+            <span class="skill-tag junior">NodeJs</span>
+            <span class="skill-tag mid">HTML</span>
+            <span class="skill-tag junior">Python</span>
+            <span class="skill-tag junior">FoxPro</span>
+            <span class="skill-tag mid">CSS/SCSS</span>
           </div>
         </div>
 
         <div class="skill-container">
           <h3>TOOLS & FRAMEWORKS</h3>
           <div>
-            <span class="skill-tag">.Net Core</span>
-            <span class="skill-tag">ASP.Net Core</span>
-            <span class="skill-tag">Azure DevOps</span>
-            <span class="skill-tag">Ext.Js</span>
-            <span class="skill-tag">React.Js</span>
-            <span class="skill-tag">React Native</span>
-            <span class="skill-tag">Figma</span>
-            <span class="skill-tag">Adobe XD</span>
+            <span class="skill-tag senior">.Net Core</span>
+            <span class="skill-tag senior">ASP.Net Core</span>
+            <span class="skill-tag mid">Azure DevOps</span>
+            <span class="skill-tag mid">Entity Framework</span>
+            <span class="skill-tag senior">Ext.Js</span>
+            <span class="skill-tag mid">React.Js</span>
+            <span class="skill-tag junior">React Native</span>
+            <span class="skill-tag mid">Razor</span>
+            <span class="skill-tag mid">Figma</span>
+            <span class="skill-tag junior">Adobe XD</span>
           </div>
         </div>
 
         <div class="skill-container">
           <h3>DATABASES</h3>
           <div>
-            <span class="skill-tag">SQL Server</span>
-            <span class="skill-tag">PostgreSQL</span>
-            <span class="skill-tag">PLPGSQL</span>
-            <span class="skill-tag">MySQL</span>
-            <span class="skill-tag">SQLite</span>
+            <span class="skill-tag senior">SQL Server</span>
+            <span class="skill-tag mid">PostgreSQL</span>
+            <span class="skill-tag mid">PLPGSQL</span>
+            <span class="skill-tag junior">MySQL</span>
+            <span class="skill-tag junior">SQLite</span>
           </div>
         </div>
 
@@ -112,6 +117,15 @@
             <span class="skill-tag">WireFraming</span>
             <span class="skill-tag">UI/UX</span>
             <span class="skill-tag">WebMaster (G)Old</span>
+          </div>
+        </div>
+        
+        <div class="skill-container">
+          <h3>SKILL LEVEL</h3>
+          <div>
+            <span class="skill-tag junior">Little knowledge or studying</span>
+            <span class="skill-tag mid">Medium knowledge/usage</span>
+            <span class="skill-tag senior">Great knowledge</span>
           </div>
         </div>
       </div>
@@ -135,6 +149,18 @@
               -Creation of BI reports and dashboards.<br />
               -UI/UX Architecture (Figma)<br />
             </span>
+            <div class="tags">
+              <span class="skill-tag">C#</span>
+              <span class="skill-tag">Javascript</span>
+              <span class="skill-tag">Razor</span>
+              <span class="skill-tag">React.Js</span>
+              <span class="skill-tag">DevOps</span>
+              <span class="skill-tag">Agile</span>
+              <span class="skill-tag">SQL Server</span>
+              <span class="skill-tag">CSS</span>
+              <span class="skill-tag">HTML</span>
+              <span class="skill-tag">Entity Framework</span>
+            </div>
           </article>
 
           <article class="work-exp">
@@ -155,6 +181,16 @@
               -Automation and integration of fisical equipments to the company
               own ERP<br />
             </span>
+            <div class="tags">
+              <span class="skill-tag">PHP</span>
+              <span class="skill-tag">Javascript</span>
+              <span class="skill-tag">PostgreSQL</span>
+              <span class="skill-tag">PLPGSQL</span>
+              <span class="skill-tag">CSS</span>
+              <span class="skill-tag">HTML</span>
+              <span class="skill-tag">Agile</span>
+              <span class="skill-tag">Python</span>
+            </div>
           </article>
 
           <article class="work-exp">
@@ -175,6 +211,18 @@
               -Mobile development. (pwa)<br />
               -Agile methodology.<br />
             </span>
+            <div class="tags">
+              <span class="skill-tag">C#</span>
+              <span class="skill-tag">Javascript</span>
+              <span class="skill-tag">Ext.Js</span>
+              <span class="skill-tag">SQL Server</span>
+              <span class="skill-tag">CSS</span>
+              <span class="skill-tag">HTML</span>
+              <span class="skill-tag">Agile</span>
+              <span class="skill-tag">MySQL</span>
+              <span class="skill-tag">Entity Framework</span>
+              <span class="skill-tag">NodeJs</span>
+            </div>
           </article>
 
           <article class="work-exp">
@@ -192,6 +240,16 @@
               -Data Analysis and Management.<br />
               -Data migration.<br />
             </span>
+            <div class="tags">
+              <span class="skill-tag">C#</span>
+              <span class="skill-tag">FoxPro</span>
+              <span class="skill-tag">CSS</span>
+              <span class="skill-tag">SQL Server</span>
+              <span class="skill-tag">MySQL</span>
+              <span class="skill-tag">PostgreSQL</span>
+              <span class="skill-tag">PLPGSQL</span>
+              <span class="skill-tag">SQLite</span>
+            </div>
           </article>
         </div>
       </div>
@@ -199,19 +257,21 @@
       <div class="bottom-container">
         <h3 class="contact-me-title">CONTACT ME</h3>
         <div class="my-links-container">
-          <a href="https://www.linkedin.com/in/leonardo-longhi/" target="_blank" 
+          <a href="https://www.linkedin.com/in/leonardo-longhi/" target="_blank"
             ><i
               class="fa-brands fa-linkedin-in"
               title="My LinkedIn profile."
             ></i
           ></a>
-          <a href="https://api.whatsapp.com/send/?phone=5519988171807" target="_blank" 
+          <a
+            href="https://api.whatsapp.com/send/?phone=5519988171807"
+            target="_blank"
             ><i
               class="fa-brands fa-whatsapp"
               title="Contact me at Whatsapp!"
             ></i
           ></a>
-          <a href="https://github.com/LLonghi" target="_blank" 
+          <a href="https://github.com/LLonghi" target="_blank"
             ><i
               class="fa-brands fa-github-alt"
               title="Take a look at my Github!"
