bullets instead of -
&#8226; !!!

Also companies links now target _blank

--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
         <div class="work-exp-container">
           <article class="work-exp">
             <span class="company"
-              ><a href="https://www.membran-i.com/">Membran-i</a></span
+              ><a href="https://www.membran-i.com/" target="_blank">Membran-i</a></span
             >
             <span class="position">Web Developer Sr</span>
             <span class="time">04/2021 - 02/2022</span>
             <span class="role">
-              -Project administration and publishing in Azure<br />
-              -DevOps and Azure Portal tools.<br />
-              -Back end development in C#/.NET Core of the new features on the
+              &#8226; Project administration and publishing in Azure<br />
+              &#8226; DevOps and Azure Portal tools.<br />
+              &#8226; Back end development in C#/.NET Core of the new features on the
               trading platform and the artificial intelligence core.<br />
-              -Code First Database SQL Development.<br />
-              -Front End Development in Razor and React.<br />
-              -Creation of BI reports and dashboards.<br />
-              -UI/UX Architecture (Figma)<br />
+              &#8226; Code First Database SQL Development.<br />
+              &#8226; Front End Development in Razor and React.<br />
+              &#8226; Creation of BI reports and dashboards.<br />
+              &#8226; UI/UX Architecture (Figma)<br />
             </span>
             <div class="tags">
               <span class="skill-tag">C#</span>
@@ -165,20 +165,20 @@
 
           <article class="work-exp">
             <span class="company"
-              ><a href="https://www.barbarex.com.br/">Barbarex</a></span
+              ><a href="https://www.barbarex.com.br/" target="_blank">Barbarex</a></span
             >
             <span class="position">Web Developer Sr</span>
             <span class="time">12/2020 - 04/2021</span>
             <span class="role">
-              -Team Management. (5 devs)<br />
-              -Full stack development in php and javascript.<br />
-              -Database administration and maintenance.<br />
-              -Data analysis and application for the company's knowledge base
+              &#8226; Team Management. (5 devs)<br />
+              &#8226; Full stack development in php and javascript.<br />
+              &#8226; Database administration and maintenance.<br />
+              &#8226; Data analysis and application for the company's knowledge base
               and decision making. (BI)<br />
-              -Agile Methodology.<br />
-              -Research, coordination and implementation of new support
+              &#8226; Agile Methodology.<br />
+              &#8226; Research, coordination and implementation of new support
               technologies.<br />
-              -Automation and integration of fisical equipments to the company
+              &#8226; Automation and integration of fisical equipments to the company
               own ERP<br />
             </span>
             <div class="tags">
@@ -195,21 +195,21 @@
 
           <article class="work-exp">
             <span class="company"
-              ><a href="https://www.bsource.com.br/">BSource</a></span
+              ><a href="https://www.bsource.com.br/" target="_blank">BSource</a></span
             >
             <span class="position">Web Developer</span>
             <span class="time"> 04/2018 - 12/2020</span>
             <span class="role">
-              -Front end development.<br />
-              -.NET and ASP.NET CORE API development.<br />
-              -Database administration and maintenance.<br />
-              -Data analysis and application.<br />
-              -UI/UX Architecture.<br />
-              -Wireframing. (AdobeXD)<br />
-              -User driven research and user training.<br />
-              -Team/Project Management.<br />
-              -Mobile development. (pwa)<br />
-              -Agile methodology.<br />
+              &#8226; Front end development.<br />
+              &#8226; .NET and ASP.NET CORE API development.<br />
+              &#8226; Database administration and maintenance.<br />
+              &#8226; Data analysis and application.<br />
+              &#8226; UI/UX Architecture.<br />
+              &#8226; Wireframing. (AdobeXD)<br />
+              &#8226; User driven research and user training.<br />
+              &#8226; Team/Project Management.<br />
+              &#8226; Mobile development. (pwa)<br />
+              &#8226; Agile methodology.<br />
             </span>
             <div class="tags">
               <span class="skill-tag">C#</span>
@@ -227,18 +227,18 @@
 
           <article class="work-exp">
             <span class="company"
-              ><a href="https://www.vdtecnologia.com.br/"
+              ><a href="https://www.vdtecnologia.com.br/" target="_blank"
                 >VD Tecnologia</a
               ></span
             >
             <span class="position">Developer Jr</span>
             <span class="time">01/2016 - 04/2018</span>
             <span class="role">
-              -Custom application and ERP development.<br />
-              -Project management.<br />
-              -User driven research and user training.<br />
-              -Data Analysis and Management.<br />
-              -Data migration.<br />
+              &#8226; Custom application and ERP development.<br />
+              &#8226; Project management.<br />
+              &#8226; User driven research and user training.<br />
+              &#8226; Data Analysis and Management.<br />
+              &#8226; Data migration.<br />
             </span>
             <div class="tags">
               <span class="skill-tag">C#</span>
