--- a/index.html
+++ b/index.html
@@ -72,13 +72,16 @@
           <h3>LANGUAGES</h3>
           <div>
             <span class="skill-tag senior">C#</span>
-            <span class="skill-tag junior">PHP</span>
+            <span class="skill-tag mid">PHP</span>
+            <span class="skill-tag mid">Ruby</span>
             <span class="skill-tag senior">Javascript</span>
-            <span class="skill-tag junior">NodeJs</span>
-            <span class="skill-tag mid">HTML</span>
+            <span class="skill-tag junior">Java</span>
+            <span class="skill-tag mid">NodeJs</span>
             <span class="skill-tag junior">Python</span>
+            <span class="skill-tag mid">HTML</span>
             <span class="skill-tag junior">FoxPro</span>
             <span class="skill-tag mid">CSS/SCSS</span>
+            <span class="skill-tag junior">Lua</span>
           </div>
         </div>
 
@@ -95,6 +98,7 @@
             <span class="skill-tag mid">Razor</span>
             <span class="skill-tag mid">Figma</span>
             <span class="skill-tag junior">Adobe XD</span>
+            <span class="skill-tag mid">AWS</span>
           </div>
         </div>
 
@@ -105,6 +109,7 @@
             <span class="skill-tag mid">PostgreSQL</span>
             <span class="skill-tag mid">PLPGSQL</span>
             <span class="skill-tag junior">MySQL</span>
+            <span class="skill-tag mid">MongoDB</span>
             <span class="skill-tag junior">SQLite</span>
           </div>
         </div>
@@ -116,6 +121,7 @@
             <span class="skill-tag">Agile</span>
             <span class="skill-tag">WireFraming</span>
             <span class="skill-tag">UI/UX</span>
+            <span class="skill-tag">CI/CD</span>
             <span class="skill-tag">WebMaster (G)Old</span>
           </div>
         </div>
@@ -135,10 +141,75 @@
         <div class="work-exp-container">
           <article class="work-exp">
             <span class="company"
+              ><a href="https://actdigital.com/" target="_blank">Act Digital - BTG Pactual</a></span
+            >
+            <span class="position">Full Stack Developer Sr</span>
+            <span class="time">07/2022 - now</span>
+            <span class="description">Acting on the largest investment bank in Latin America, BTG Pactual.<br>
+              <br>
+              As a senior fullstack developer, I've helped creating and tuning our internal services to get low cost and fast enriched data, creating in-house services responsible for dealing with the Brazil stock market's collateral (B3), from lambdas, microservices, jobs to ui/ux for our bankers to use daily.
+              Talking to users to collect requisites, drawing processes for validation and documentation are also part of the process to better understand and help co-coordinate the teams.</span>
+            <span class="role">
+              &#8226; Development and maintenance of routines, services and all the needs of internal tools in C# <br />
+              &#8226; FontEnd UI UX with Figma, Miro and Angular.<br />
+              &#8226; Database development, tuning and maintenance in MySQL and MongoDB .<br />
+              &#8226; Microservices and messaging architecture (RabbitMq, SNS and SQS) .<br />
+              &#8226; DevOps, CI/CD and Deploy via Azure.<br />
+              &#8226; AWS lambda and CloudWatch.<br />
+              &#8226; UI/UX Architecture (Figma)<br />
+            </span>
+            <div class="tags">
+              <span class="skill-tag">C#</span>
+              <span class="skill-tag">Javascript</span>
+              <span class="skill-tag">AngularJs</span>
+              <span class="skill-tag">Azure DevOps</span>
+              <span class="skill-tag">Agile</span>
+              <span class="skill-tag">MySQL</span>
+              <span class="skill-tag">MongoDB</span>
+              <span class="skill-tag">CSS</span>
+              <span class="skill-tag">CI/CD</span>
+              <span class="skill-tag">HTML</span>
+              <span class="skill-tag">Entity Framework</span>
+              <span class="skill-tag">AWS</span>
+            </div>
+          </article>
+
+          <article class="work-exp">
+            <span class="company"
+              ><a href="https://etagdigital.com/" target="_blank">Etag Digital</a></span
+            >
+            <span class="position">Full Stack Developer Sr</span>
+            <span class="time">04/2022 - 09/2022</span>
+            <span class="description">As the lead developer, I was responsible for planning, coordinate and develop new features for the bussines core, to create bussines inteligence over captured data on the clients web comerces, focused in creating and increase sales for them with our internal AI.
+              My main responsibility was to transform the startup MVP into a MMP and a better product for both us and the customers.
+              I've helped decreasing the cost of opertain, and increasing the overall capacity of the company to process data.</span>
+            <span class="role">
+              &#8226; Development of new features with PHP and NodeJs to compose the business AI and enhance the company data intelligence to increase our partners sales<br />
+              &#8226; Wireframing, design thinking and creation of new front-end tools for our clients to better assist them with our product in ReactJs.<br />
+              &#8226; Database analysis and creation with MariaDB & MongoDB.<br />
+            </span>
+            <div class="tags">
+              <span class="skill-tag">PHP</span>
+              <span class="skill-tag">Javascript</span>
+              <span class="skill-tag">NodeJs</span>
+              <span class="skill-tag">React.Js</span>
+              <span class="skill-tag">Azure DevOps</span>
+              <span class="skill-tag">Agile</span>
+              <span class="skill-tag">PostgreSQL</span>
+              <span class="skill-tag">MongoDB</span>
+              <span class="skill-tag">HTML</span>
+              <span class="skill-tag">CSS</span>
+            </div>
+          </article>
+
+          <article class="work-exp">
+            <span class="company"
               ><a href="https://www.membran-i.com/" target="_blank">Membran-i</a></span
             >
             <span class="position">Web Developer Sr</span>
             <span class="time">04/2021 - 02/2022</span>
+            <span class="description">As a front-end lead developer and being myself a full stack developer, I was able to help the company develop it's trading AI, implementing many of its real time hability to calculate and take decision on good trades and also create the user experience to use it while porting the project from an razor MVP to and React White label product.
+            </span>
             <span class="role">
               &#8226; Project administration and publishing in Azure<br />
               &#8226; DevOps and Azure Portal tools.<br />
@@ -169,6 +240,7 @@
             >
             <span class="position">Web Developer Sr</span>
             <span class="time">12/2020 - 04/2021</span>
+            <span class="description">Being the it sub-manager for a temporary period, I had the task to coordinate the team into recreating and tuning the core of their 20+ years in-house software. I also personally developed many integrations from the factory machines to be controlled via their web system based on its production order scheeduling and give real time data to all the company areas, from financial to shippment.</span>
             <span class="role">
               &#8226; Team Management. (5 devs)<br />
               &#8226; Full stack development in php and javascript.<br />
@@ -199,6 +271,9 @@
             >
             <span class="position">Web Developer</span>
             <span class="time"> 04/2018 - 12/2020</span>
+            <span class="description">Working in a software house, I had the opportunity to participate in a diverse set of projects for different areas such as Schools, Building companies, Banks and Fintechs, Medical companies and many others.
+              Aside from cooperating in many projects I was the solo developer from 2 of the company products, TskPlan (for building companies) and a web based Data Migration Tool created to Embarcadero (Delphi's company)
+              Visiting our customers to plan our development, and validate it was also part of the job.</span>
             <span class="role">
               &#8226; Front end development.<br />
               &#8226; .NET and ASP.NET CORE API development.<br />
@@ -216,12 +291,15 @@
               <span class="skill-tag">Javascript</span>
               <span class="skill-tag">Ext.Js</span>
               <span class="skill-tag">SQL Server</span>
+              <span class="skill-tag">Ruby</span>
               <span class="skill-tag">CSS</span>
               <span class="skill-tag">HTML</span>
               <span class="skill-tag">Agile</span>
               <span class="skill-tag">MySQL</span>
               <span class="skill-tag">Entity Framework</span>
               <span class="skill-tag">NodeJs</span>
+              <span class="skill-tag">PHP</span>
+              <span class="skill-tag">PostgreSQL</span>
             </div>
           </article>
 
@@ -233,6 +311,8 @@
             >
             <span class="position">Developer Jr</span>
             <span class="time">01/2016 - 04/2018</span>
+            <span class="description">Being my first job, I started developing scripts to migrate data from companies to new softwares, as I gained experience, I've got the role of creating customizations to exist softwares to attend things they usualy dont.
+              I've also created an GUI tool to automaticaly migrate data from differente sources that was code-less and could be done by non developers.</span>
             <span class="role">
               &#8226; Custom application and ERP development.<br />
               &#8226; Project management.<br />
@@ -244,11 +324,14 @@
               <span class="skill-tag">C#</span>
               <span class="skill-tag">FoxPro</span>
               <span class="skill-tag">CSS</span>
+              <span class="skill-tag">HTML</span>
+              <span class="skill-tag">Ruby</span>
               <span class="skill-tag">SQL Server</span>
               <span class="skill-tag">MySQL</span>
               <span class="skill-tag">PostgreSQL</span>
               <span class="skill-tag">PLPGSQL</span>
               <span class="skill-tag">SQLite</span>
+              <span class="skill-tag">Java</span>
             </div>
           </article>
         </div>
