--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <span class="time">04/2022 - 09/2022</span>
             <span class="description">As the lead developer, I was responsible for planning, coordinate and develop new features for the bussines core, to create bussines inteligence over captured data on the clients web comerces, focused in creating and increase sales for them with our internal AI.
               My main responsibility was to transform the startup MVP into a MMP and a better product for both us and the customers.
-              I've helped decreasing the cost of opertain, and increasing the overall capacity of the company to process data.</span>
+              I've helped decreasing the cost of operation while increasing the overall capacity of the company to process data.</span>
             <span class="role">
               &#8226; Development of new features with PHP and NodeJs to compose the business AI and enhance the company data intelligence to increase our partners sales<br />
               &#8226; Wireframing, design thinking and creation of new front-end tools for our clients to better assist them with our product in ReactJs.<br />
