--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             >
             <span class="position">Web Developer Sr</span>
             <span class="time">12/2020 - 04/2021</span>
-            <span class="description">Being the it sub-manager for a temporary period, I had the task to coordinate the team into recreating and tuning the core of their 20+ years in-house software. I also personally developed many integrations from the factory machines to be controlled via their web system based on its production order scheeduling and give real time data to all the company areas, from financial to shippment.</span>
+            <span class="description">Being the IT sub-manager for a temporary period, I had the task to coordinate the team into recreating and tuning the core of their 20+ years in-house software. I also personally developed many integrations from the factory machines to be controlled via their web system based on its production order scheeduling and give real time data to all the company areas, from financial to shippment.</span>
             <span class="role">
               &#8226; Team Management. (5 devs)<br />
               &#8226; Full stack development in php and javascript.<br />
