--- a/index.html
+++ b/index.html
@@ -96,9 +96,12 @@
             <span class="skill-tag mid">React.Js</span>
             <span class="skill-tag junior">React Native</span>
             <span class="skill-tag mid">Razor</span>
+            <span class="skill-tag senior">Angular</span>
             <span class="skill-tag mid">Figma</span>
+            <span class="skill-tag mid">Docker</span>
             <span class="skill-tag junior">Adobe XD</span>
             <span class="skill-tag mid">AWS</span>
+            <span class="skill-tag mid">Jenkins</span>
           </div>
         </div>
 
@@ -141,10 +144,42 @@
         <div class="work-exp-container">
           <article class="work-exp">
             <span class="company"
+              ><a href="https://www.castgroup.com.br/" target="_blank">Cast group</a></span
+            >
+            <span class="position">Tech lead - Full Stack Developer Sr</span>
+            <span class="time">09/2023 - NOW</span>
+            <span class="description">Being the tech lead on two of the main teams, I am responsible for coordinating the development and architecture cells, while developing a complete software for school management to the Brazilian Government (SEEDF), helping on the creation of a fast and reliable data control from students access to the government administration of the schools. </br>
+              I've actively participated in planning and developing some of the critical system modules like Transport, Feeding, Financial, and the new Brazilian Grade systems.</span>
+            <span class="role">
+              &#8226; Back-end Development and maintenance of routines, features, services and all the needs of internal tools in C#.<br />
+              &#8226; Font-end Development with Angular.<br />
+              &#8226; Database development, tuning and maintenance in SQL Server.<br />
+              &#8226; Microservices and messaging architecture (RabbitMq).<br />
+              &#8226; CI/CD and Deploy via Jenkins and Rancher.<br />
+              &#8226; UI/UX Architecture (Figma)<br />
+            </span>
+            <div class="tags">
+              <span class="skill-tag">C#</span>
+              <span class="skill-tag">Javascript</span>
+              <span class="skill-tag">Angular</span>
+              <span class="skill-tag">Agile</span>
+              <span class="skill-tag">SQL Server</span>
+              <span class="skill-tag">MongoDB</span>
+              <span class="skill-tag">CSS</span>
+              <span class="skill-tag">CI/CD</span>
+              <span class="skill-tag">HTML</span>
+              <span class="skill-tag">Entity Framework</span>
+              <span class="skill-tag">Docker</span>
+              <span class="skill-tag">Jenkins</span>
+            </div>
+          </article>
+
+          <article class="work-exp">
+            <span class="company"
               ><a href="https://actdigital.com/" target="_blank">Act Digital - BTG Pactual</a></span
             >
             <span class="position">Full Stack Developer Sr</span>
-            <span class="time">09/2022 - now</span>
+            <span class="time">09/2022 - 08/2023</span>
             <span class="description">Acting on the largest investment bank in Latin America, BTG Pactual.<br>
               <br>
               As a senior fullstack developer, I've helped creating and tuning our internal services to get low cost and fast enriched data, creating in-house services responsible for dealing with the Brazil stock market's collateral (B3), from lambdas, microservices, jobs to ui/ux for our bankers to use daily.
@@ -161,7 +196,7 @@
             <div class="tags">
               <span class="skill-tag">C#</span>
               <span class="skill-tag">Javascript</span>
-              <span class="skill-tag">AngularJs</span>
+              <span class="skill-tag">Angular</span>
               <span class="skill-tag">Azure DevOps</span>
               <span class="skill-tag">Agile</span>
               <span class="skill-tag">MySQL</span>
